--- a/style/body.css
+++ b/style/body.css
@@ -8,237 +8,205 @@
 
 body {
     overflow-x: hidden;
+    width: 100vw;
+}
+
+h1, h2 {
+    font-family: "Righteous";
+    font-weight: 100;
+    letter-spacing: 2px;
+    color: #2a467a;
+}
+
+h1 {
+    display: block;
+    justify-content: right;
+    font-size: 45pt;
+    text-transform: uppercase;
+    margin-bottom: 3vh;
+}
+
+    .texto .barra-horizontal {
+        width: 50%;
+        min-height: 3px;
+        margin-left: 50%;
+        margin-bottom: 8vh;
+        background: #2a467a;
+    }
+
+    #tela-inicial h1, p {
+        text-align: right;
+    }    
+
+h2 { 
+    font-size: 25pt;
+    text-transform: capitalize;
 }
 
 .corpo {
+    display: block;
+    justify-content: center;
+    align-items: center;
     padding: 0 8vw;
 }
 
-    .corpo p {
-        font-family: 'Exo 2', sans-serif;
-        color: #494949;
-        font-size: 14pt;
-    }
-
-.desenho-e-texto {
-    display: flex;
-    justify-content: space-between;
-}
-
-    .desenho {
-        width: 50vw;
-        height: 70vh;
-        display: flex;
-        justify-content: center;
-        align-content: center;
-        overflow-x: hidden;
-        overflow-y: hidden;
-        margin: 0;
-    }
-
-        .balao {
-            min-width: 25vw;
-            max-width: 35vw;
-            min-height: 60vh;
-            max-height: 60vh;
-            position: absolute;
-            transform: translateY(0px);
-            animation: float 5s ease infinite;
-        }
-
-        .nuvens {    
-            z-index: 1;
-            width: 30vw;
-            min-height: 70vh;    
-        }
-
-            @keyframes float {
-                0% { transform: translateY(0px); }
-                50% { transform: translateY(25px);}
-                100% { transform: translateY(0px);}
-            }
-
-        .texto-direita {    
-            width: 50vw;
-            margin: 0 0 13vh 0;
-            padding-left: 6vw;
-            display: flex;
-            flex-direction: column;
-            justify-content: top;
-            text-align: right;
-        }
-
-            .texto-direita p {
-                padding-left: 30%;
-            }
-
-h1 {
-    font-family: "Righteous";
-    font-weight: 100;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    color: #2a467a;
-    font-size: 45pt;
-    margin-bottom: 8vh;
-}
-
-    h1 .sublinhado {    
-        margin-left: 40%;
-        margin-top: 8px;
-        height: 5px;
-        background: #2a467a;    
-    }
-
-h2 {
-    font-family: "Righteous";
-    font-weight: 100;
-    letter-spacing: 2px;
-    text-transform: capitalize;
-    color: #2a467a;
-    font-size: 25pt;
-    margin-bottom: 8vh;
-    text-align: center;
-}
-
-.area-login {
-    width: 42vw;
-    padding: 0;
-    display: block;
-    justify-content: center;
-    border-right: 2px solid #96acc0;
-}
-
-    .area-login a {
-        text-decoration: none;
-    }
-
-        .area-login a p {
-            width: 80%;
-            font-family: "Righteous";
-            text-align: center; 
-            text-decoration: none;
-            text-transform: uppercase;
-            font-size: 12pt;
-            color: #2a467a;
-        }
-
-.container .desenho-e-texto {
-    display: flex;
-    justify-content: space-between;
-}
-
-input {
-    border-style: solid;
+.container {
     width: 100%;
-}
-
-form.formulario-login {
-    width: 80%;
-}
-
-form.formulario-login label {
-    font-family: "Righteous";
-    text-transform: uppercase;
-    font-weight: 100;
-    letter-spacing: 0.5px;
     display: block;
-    margin-bottom: 10px;
-    color: #96acc0;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0;
+    padding: 0;
 }
 
-    form .form-group { 
+    .container h2 {
         width: 100%;
-        margin-bottom: 20px;
+        text-align: center;
+        margin-bottom: 50px;
     }
 
-        form .form-group input {
-            display: flex;
-            justify-content: left;
-            width: 92%;
-            height: 45px;       
-            padding: 0 15px;
+    .desenho-e-texto {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+    }
+
+        #tela-inicial .texto {
+            display: block;
+            justify-content: space-evenly;
+            align-items: flex-start;
+            overflow-x: hidden;
+        }
+
+        .desenho-e-texto .texto {
+            display: inline-block;            
+            width: 49%;
+            top: 0;
+        }
+
+        #tela-inicial .texto .texto-conteudo {
             font-family: "Exo 2";
             font-size: 14pt;
-            color: #2a467a;
-            border-color: #96acc0;
+            color: #4d4d4d;
+            padding-left: 10vw;
         }
 
-        form .form-group button {
-            width: 100%;
-            padding: 15px 12px;
-            margin: 10px 0;
-            border: none;
-            border-radius: 5px;
-            color: white;
-            font-family: "Righteous";
-            font-size: 14pt;
-            text-transform: uppercase;
-            background: #2a467a;
+            .texto form {
+                width: 35vw;
+                display: block;
+                justify-content: space-between;
+            }
+
+            .texto form p { text-align: center; }
+
+                .texto form .form-group {
+                    display: block;
+                    margin-bottom: 10px;
+                }
+
+                    .form-group label, .form-group input {
+                        display: block;
+                        margin-bottom: 7px;
+                    }
+
+                    .form-group label {
+                        font-family: "Righteous";
+                        font-size: 12pt;
+                        font-weight: 100;
+                        text-transform: uppercase;
+                        color: #adb7ca;
+                    }
+
+                    .form-group input {
+                        width: 100%;
+                        max-width: 33.2vw;
+                        height: 4vh;
+                        border: 2px solid #adb7ca;
+                        padding: 10px;
+                        font-family: "Exo 2";
+                        font-size: 12pt;
+                        color: #2a467a;
+                    }
+
+                    .form-group button {
+                        width: 100%;
+                        border: none;
+                        border-radius: 5px;
+                        margin: 15px 0;
+                        padding: 15px 10px;
+                        font-family: "Righteous";
+                        font-size: 14pt;
+                        text-transform: uppercase;
+                        color: white;
+                        background: #2a467a;
+                        cursor: pointer;
+                        transition: 1s;
+                    }
+
+                        .form-group button:hover {
+                            opacity: 0.7;
+                        }
+
+                    .form-group #olho-senha {
+                        position: absolute;
+                    }
+
+            .texto form a {
+                font-family: "Righteous";
+                font-size: 12pt;
+                font-weight: 100;
+                text-transform: uppercase;
+                text-decoration: none;
+                text-align: center;
+                color: #2a467a;
+                cursor: pointer;
+                transition: 1s;
+            }
+
+                .texto form a:hover {
+                    opacity: 0.7;
+                    transition: 1s;
+                }
+
+        .barra-vertical {
+            width: 3px;
+            min-height: 100%;
+            background: #adb7ca;
         }
 
-        #sigin_pass:focus {
-            color: red;
+        .desenho-e-texto .desenho {
+            display: flex;
+            justify-content: space-around;
+            width: 49%;
         }
+
+            .desenho img {
+                display: inline-block;
+                max-width: 32vw;
+            }
+
+            .desenho img#balao {
+                display: block;
+                transition: 1s;
+                animation: cima-baixo 5s ease-in infinite;
+            }
+
+            .desenho img#nuvens {
+                position: absolute;
+                transition: 1s;
+                animation: esquerda-direita 8s ease-out infinite;
+            }
 
 footer {
-    padding: 50px 8vw;
+    display: flex;
+    margin-top: 5vh;
+    padding: 2vw 0;
 }
 
     footer p {
-        font-family: 'Exo 2', sans-serif;
-        font-size: 12pt;
-        text-align: center;
-    }
-
-@media (max-width: 999px) { /*responsividade*/
-
-    body {overflow-x: hidden;}
-
-    .desenho-e-texto {
-        flex-direction: column;
-        width: 80vw;
-        margin-left: 3.5vw;
-    }
-
-    div.texto-direita, p.texto-conteudo, h1 {
-        padding: 0px;
-        text-align: center;
-        max-width: 98%;
-    }
-
-    div.texto-direita {
-        padding-left: 0;
         width: 100%;
-        margin: 0;        
-        display: block;
-        flex-direction: column;
-        justify-content: center;
+        font-family: "Exo 2";
+        font-size: 12pt;
+        font-weight: 0;
         text-align: center;
-    }
-
-    div.sublinhado {
-        padding: 0;
-        margin: 0 10%;
-        margin-top: 10px;
-    }
-
-    div.desenho-e-texto div.desenho {
-        width: 80vw;
-        margin-bottom: 8vh;        
-        max-height: 50vh;
-        display: flex;
-        justify-content: space-around;
-    }    
-
-    .balao {
-        min-width: 20vw;
-        max-width: 30vw;
-        min-height: 50vh;
-    }
-
-    .nuvens {
-        min-width: 72%;
-        min-height: 50vh;
-        max-height: 50vh;
-    }
-}
+    }       
