Esqueceu senha - Janela modal
Consertei o form da área de cadastro e construi uma janela modal responsiva para quando o usuário esquecer a senha.

--- a/style/animacoes.css
+++ b/style/animacoes.css
@@ -33,3 +33,7 @@
         transform: translateX(0);
     }
 }
+
+@keyframes janela-modal {/*animação que faz a janela modal aparecer com fade-in*/
+    0% {opacity: 0;} 100% {opacity: 1;}
+}
