--- a/style/animacoes.css
+++ b/style/animacoes.css
@@ -37,3 +37,26 @@
 @keyframes janela-modal {/*animação que faz a janela modal aparecer com fade-in*/
     0% {opacity: 0;} 100% {opacity: 1;}
 }
+
+@keyframes navLinkFade { /*animação do menu mobile navbar*/
+    from {
+        opacity: 0;
+        transform: translateX(50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0)
+    }
+}
+
+@keyframes muda-degrade {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
