--- a/style/body.css
+++ b/style/body.css
@@ -7,8 +7,8 @@
 /*font-family: 'Exo 2', sans-serif;*/
 
 body {
-    overflow-x: hidden;
     width: 100vw;
+    overflow-x: hidden;
 }
 
 h1, h2, h3 {
@@ -61,11 +61,14 @@ h3 {
         text-align: right;
     }    
 
-.corpo {
+.corpo {    
+    overflow-x: hidden;
     display: block;
     justify-content: center;
     align-items: center;
+    margin-top: 5vh;
     padding: 0 8vw;
+    box-sizing: border-box;
 }
 
 .container {
