--- a/style/responsivo.css
+++ b/style/responsivo.css
@@ -58,7 +58,7 @@
         }
 
         #tela-inicial .desenho img#nuvens {
-            top: 8vh;
+            margin-top: -12vh;
             position: absolute;
             min-height: 50vh;
             max-height: 90vh;
@@ -66,47 +66,102 @@
 
 }
 
+@media (max-width: 999px) { /*header*/
+    
+    body {
+        overflow-x: hidden;
+    }
+
+    #header-normal .logo {
+        width: 40vw;
+        height: auto;
+    }
+
+    #header-branco .logo {
+        width: 30vw;
+    }
+
+    #header-branco nav {padding-right: 0;}
+    
+    #header-normal ul {
+        position: absolute;
+        top: 15vh;
+        right: 0;
+        width: 45vw;
+        height: 90vh;        
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        z-index: 2;
+        padding: 0;
+        transform: translateX(100%);
+        transition: transform 0.3s ease-in;
+    }
+
+        #header-normal ul {background: #2a467a;}
+
+        #header-branco ul {background: white;}
+
+    #header-normal ul li {
+        margin-left: 0;
+        width: 100%;
+        padding: 25px 0px;
+        opacity: 0;
+        align-items: center;        
+    }    
+
+    #header-normal a {
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        color: #fff;
+    }
+
+    #header-normal .mobile-menu {display: block;}
+
+}
+
 @media (max-width: 999px) { /*tela login*/
 
-#tela-login, #tela-login .desenho-e-texto {
-    display: block;
-}
+    #tela-login, #tela-login .desenho-e-texto {
+        display: block;
+    }
 
-#tela-login .texto, #tela-login .desenho {
-    width: 100%;
-}
+    #tela-login .texto, #tela-login .desenho {
+        width: 100%;
+    }
 
-#tela-login .texto {display: block;}
+    #tela-login .texto {display: block;}
 
-#tela-login .texto input {
-    max-width: 94%;
-    margin-right: 0;
-}
+    #tela-login .texto input {
+        max-width: 94%;
+        margin-right: 0;
+    }
 
-#tela-login .alert {
-    width: auto;
-    text-align: center;
-}
+    #tela-login .alert {
+        width: auto;
+        text-align: center;
+    }
 
-#tela-login .barra-vertical {
-    display: none;
-}
+    #tela-login .barra-vertical {
+        display: none;
+    }
 
-#tela-login .barra-horizontal {
-    display: block;
-    width: 100%;
-    height: 3px;
-    margin: 5vh 0;
-    background: #adb7ca;
-}
+    #tela-login .barra-horizontal {
+        display: block;
+        width: 100%;
+        height: 3px;
+        margin: 5vh 0;
+        background: #adb7ca;
+    }
 
-#tela-login form {
-    width: 100%;
-}
+    #tela-login form {
+        width: 100%;
+    }
 
-#tela-login #cerebro-carregando img {
-    min-width: 80%;
-}
+    #tela-login #cerebro-carregando img {
+        min-width: 80%;
+    }
 
 }
 
@@ -148,6 +203,79 @@
 
     #pg-cadastro .checkbox-termos .texto-conteudo {
         padding-left: 2vw;
+    }
+
+}
+
+/*minhas atividades*/
+
+@media (max-width: 999px) { /*titulo da pagina*/
+
+    .header-titulo {
+        display: block;
+    }
+
+    .header-titulo .desenho-e-texto {
+        display: block;
+    }
+
+    .header-titulo .texto {
+        display: block;
+        width: 100%;
+    }
+
+    .header-titulo h1 {
+        width: 100%;
+        text-align: center;
+    }
+
+    .header-titulo p {
+        width: 100%;
+        text-align: center;
+        margin-bottom: 8vh;
+    }
+
+    .header-titulo .desenho {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .header-titulo img {
+        min-width: 100%;
+    }
+
+}
+
+@media (max-width: 999px) { /*barra de pesquisa*/
+
+    .barra-pesquisa {
+        display: block;
+        height: auto;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .barra-pesquisa .form-group {
+        margin-bottom: 2vh;
+        min-height: 8vh;
+        display: flex;
+        align-items: center;
+    }
+
+    .barra-pesquisa .form-group {
+        min-width: 82vw;
+        max-width: 100%;
+    }
+
+    .barra-pesquisa a {
+        display: flex;
+        justify-content: center;
+    }
+
+    .barra-pesquisa a p {
+        width: 100%;
     }
 
 }
