--- a/style/header.css
+++ b/style/header.css
@@ -132,6 +132,7 @@ header {
     .nav-list-index a li p {width: 100%;}
 
 .menu { /*header das paginas do seia em si*/
+    height: auto;
     min-height: 16vh; 
     box-shadow: 0px 3px 10px 0px #696969;
 }
@@ -219,14 +220,19 @@ header {
 
 
 .mobile-menu {
-    display: none;
-    cursor:pointer;
+    box-sizing: border-box;
+    display: none;  
+    cursor: pointer;
+    margin: 0;
+    padding: 0;
 }
         
     .mobile-menu div {
+        box-sizing: border-box;
         width: 32px;
         height: 2px;
-        margin: 8px;
+        margin: 0 8px;
+        margin-bottom: 8px;
         transition: 0.3s;
     }        
 
@@ -237,59 +243,6 @@ header {
     }
 
     #header-branco .mobile-menu div {background: #2a467a;}
-
-@media (max-width: 999px) {
-    
-    body {
-        overflow-x: hidden;
-    }
-
-    #header-normal .logo {
-        width: 40vw;
-        height: auto;
-    }
-
-    #header-branco .logo {
-        width: 30vw;
-    }
-
-    #header-branco nav {padding-right: 0;}
-    
-    #header-normal ul {
-        position: absolute;
-        z-index: 2;
-        padding: 0;
-        top: 15vh;
-        right: 0;
-        width: 45vw;
-        height: 90vh;        
-        flex-direction: column;
-        justify-content: space-around;
-        transform: translateX(100%);
-        transition: transform 0.3s ease-in;        
-    }
-
-        #header-normal ul {background: #2a467a;}
-
-        #header-branco ul {background: white;}
-
-    #header-normal ul li {
-        margin-left: 0;
-        width: 100%;
-        padding: 25px 0px;
-        opacity: 0;
-        align-items: center;
-    }
-
-    a {
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-    }
-
-    #header-normal .mobile-menu {display: block;}
-
-}
 
 #header-normal ul.active { 
     transform: translateX(0);
@@ -305,15 +258,4 @@ header {
 
 #header-normal .mobile-menu.active .line3 {
     transform: rotate(45deg) translate(-5px, -7px);
-}
-
-@keyframes navLinkFade {
-    from {
-        opacity: 0;
-        transform: translateX(50px);
-    }
-    to {
-        opacity: 1;
-        transform: translateX(0)
-    }
 }
