--- a/style/body.css
+++ b/style/body.css
@@ -8,6 +8,7 @@
 
 body {
     width: 100vw;
+    height: 100vh;
     overflow-x: hidden;
 }
 
@@ -254,6 +255,8 @@ h3 {
 
             .desenho img#balao {
                 display: block;
+                margin-top: 5vh;
+                width: 65%;
                 transition: 1s;
                 animation: cima-baixo 5s ease-in infinite;
             }
