--- a/style/numero-pagina.css
+++ b/style/numero-pagina.css
@@ -17,6 +17,16 @@ ul.pagination {
     background: #2a467a;
 }
 
+ul.pagination a {
+    text-decoration: none;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 1s;
+    margin: 0 1.5vh;
+}
+
 ul.pagination li {
     list-style: none;
     font-family: "Righteous";
@@ -27,15 +37,14 @@ ul.pagination li {
     justify-content: center;
     align-items: center;
     transition: 1s;
-    cursor: pointer;
-    margin: 0 1.5vh;
+    cursor: pointer;    
 }
 
     ul.pagination .page-item:hover {
         background: #fff;
     }
 
-    ul.pagination .page-item:hover a {
+    ul.pagination a .page-item:hover {
         color: #2a467a;
     }
 
@@ -43,15 +52,6 @@ ul.pagination li {
         opacity: 0.7;
     }
 
-ul.pagination li a {
-    text-decoration: none;
-    color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: 1s;
-}
-
-ul.pagination li a img {
+ul.pagination a li img {
     width: 30px;
 }
