--- a/style/responsivo.css
+++ b/style/responsivo.css
@@ -255,13 +255,16 @@
     .header-titulo p {
         width: 100%;
         text-align: center;
-        margin-bottom: 8vh;
+        margin-bottom: 5vh;
     }
 
     .header-titulo .desenho {
         width: 100%;
         display: flex;
+        flex-direction: column;
         justify-content: center;
+        align-items: center;
+        max-height: 30vh;
     }
 
     .header-titulo img {
@@ -279,6 +282,7 @@
         width: 100%;
         justify-content: center;
         align-items: center;
+        margin-bottom: 3vh;
     }
 
     .barra-pesquisa form {
@@ -286,9 +290,9 @@
     }
 
     .barra-pesquisa .form-group {
-        margin-bottom: 2vh;
+        margin: 2vh 0;
         width: 100%;
-        min-height: 8vh;
+        height: 6vh;
         display: flex;
         align-items: center;
     }
@@ -302,5 +306,22 @@
     .barra-pesquisa a p {
         width: 100%;
     }
+
+}
+
+@media (max-width: 999px) { /*área dos cards*/
+
+    .card-columns {
+        display: block;
+    }
+
+}
+
+@media (max-width: 999px) { /*paginação*/
+
+    ul.pagination {
+        width: 100%;
+        justify-content: space-around;
+    }    
 
 }
